--- a/mvc-webapp/src/main/resources/templates/_footer.html
+++ b/mvc-webapp/src/main/resources/templates/_footer.html
@@ -1,5 +1,22 @@
-<div class="footer-container" xmlns:th="http://www.thymeleaf.org">
-
-	@Copy right <a href="http://o7planning.org" target="_blank">o7planning.org</a>
-	<br> See more <a>demo</a>
-</div>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="head">
+<meta charset="UTF-8" />
+<title>Login | E-Shopper</title>
+<link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}" />
+<link rel="stylesheet" type="text/css"
+	th:href="@{/font-awesome.min.css}" />
+<link rel="stylesheet" type="text/css" th:href="@{/main.css}" />
+</head>
+<body>
+	<footer id="footer">
+		<div class="footer-bottom">
+			<div class="container">
+				<div class="row">
+					<p class="pull-left">Copyright © Capgemini. All rights reserved.</p>
+				</div>
+			</div>
+		</div>
+	</footer>
+</body>
+</html>
