--- a/mvc-webapp/src/main/resources/templates/403.html
+++ b/mvc-webapp/src/main/resources/templates/403.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
    <head>
       <meta charset="UTF-8">
@@ -17,4 +17,4 @@
       <th:block th:include="/_footer"></th:block>
        
    </body>
-</html>
+</html> -->
