--- a/mvc-webapp/src/main/resources/templates/_header.html
+++ b/mvc-webapp/src/main/resources/templates/_header.html
@@ -25,7 +25,7 @@
 								<li><a href="#"><i class="fa fa-shopping-cart"></i>
 										Cart</a></li>
 								<li><a href="/adminlogin"><i class="fa fa-lock"></i>Admin Login</a></li>
-								<li><a href="/home1"><i class="fa fa-lock"></i> Login</a></li>
+								<li><a href="/loginauth"><i class="fa fa-lock"></i> Login</a></li>
 							</ul>
 						</div>
 					</div>
