--- a/mvc-webapp/src/main/resources/templates/AdminLogin.html
+++ b/mvc-webapp/src/main/resources/templates/AdminLogin.html
@@ -9,7 +9,7 @@
 <!-- <script src="/login.js" ></script> --> 
 </head>
 <body>
-<th:block th:include="/_header"></th:block>
+<th:block th:include="/HomeHeader"></th:block>
 <br/><br/><br/><br/><br/>
 	<form action="/adminlog" method="get">
 		<table align="center" width="400" height="150">
