--- a/mvc-webapp/src/main/resources/templates/GiftCard.html
+++ b/mvc-webapp/src/main/resources/templates/GiftCard.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{/main.css}" />
 </head>
 <body>
-	<th:block th:include="/_header1"></th:block>
+	<th:block th:include="/UserHeader"></th:block>
 	<br/><br/><br/><br/><br/><br/>
 	<section>
 		<div class="container">
