--- a/mvc-webapp/src/main/resources/templates/error.html
+++ b/mvc-webapp/src/main/resources/templates/error.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{/main.css}" />
 </head>
 <body>
-	<th:block th:include="/_header1"></th:block>
+	<th:block th:include="/HomeHeader"></th:block>
 	<div class="container text-center">
 		<div class="logo-404">
 			<a href="/home1"><img th:src="@{/images/logo.jpg}"/></a>
