--- a/mvc-webapp/src/main/resources/templates/index.html
+++ b/mvc-webapp/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css}" />
 </head>
 <body>
-	<th:block th:include="/_header1"></th:block>
+	<th:block th:include="/UserHeader"></th:block>
 	<th:block th:include="/_menu"></th:block>
 	<section>
 		<div class="container">
