--- a/mvc-webapp/src/main/resources/templates/AdminOrderList.html
+++ b/mvc-webapp/src/main/resources/templates/AdminOrderList.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{/main.css}" />
 </head>
 <body>
-	<th:block th:include="/_header2"></th:block>
+	<th:block th:include="/AdminHeader"></th:block>
 		<table width="1200" height="250" align="center">
 			<tr>
 				<th>Product Id</th>
