--- a/mvc-webapp/src/main/resources/templates/addProduct.html
+++ b/mvc-webapp/src/main/resources/templates/addProduct.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{/main.css}" />
 </head>
 <body>
-	<th:block th:include="/_header2"></th:block>
+	<th:block th:include="/AdminHeader"></th:block>
 	<form action="#" method="get">
 		<table align="center" width="600" height="150">
 			<tr>
