--- a/mvc-webapp/src/main/resources/templates/login-auth.html
+++ b/mvc-webapp/src/main/resources/templates/login-auth.html
@@ -1,31 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<title>Login</title>
-<meta name="description" content="" />
-<meta name="viewport" content="width=device-width" />
-<base href="/" />
-<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
-<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="/webjars/font-awesome/css/font-awesome.min.css"></link>
+<link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}" />
+<link rel="stylesheet" type="text/css" th:href="@{/font-awesome.min.css}" />
+<link rel="stylesheet" type="text/css" th:href="@{/main.css}" />
+<title>Login- Admin</title>
 </head>
-
 <body>
-
-	<div class="container">
-		<h1>Login Using</h1>
-
-		
-		<form action="/connect/linkedin" method="POST" style="display: inline">
-			<input type="hidden" name="scope"
-				value="r_basicprofile,r_emailaddress" />
-			<button type="submit" class="btn btn-primary">
-				LinkedIn <span class="fa fa-linkedin"></span>
+<th:block th:include="/HomeHeader"></th:block>
+		<form action="/connect/linkedin" method="POST">
+			<input type="hidden" name="scope" value="r_basicprofile,r_emailaddress" />
+			<button type="submit" class="btn btn-primary"> LinkedIn <span class="fa fa-linkedin"></span>
 			</button>
 		</form>
-	</div>
 </body>
 </html>
