--- a/mvc-webapp/src/main/resources/templates/index.html
+++ b/mvc-webapp/src/main/resources/templates/index.html
@@ -66,7 +66,7 @@
 											<p th:utext="${cat.id}"></p>
 											<h2 th:utext="${cat.name}"></h2>
 											<p th:utext="${cat.price}"></p>
-											<a href="#" class="btn btn-default add-to-cart"><i
+											<a th:href="@{/addtocart} + '?id='+ ${cat.id}" class="btn btn-default add-to-cart"><i
 												class="fa fa-shopping-cart"></i>Add to cart</a>
 										</div>
 									</div>
