--- a/mvc-webapp/src/main/resources/templates/UserCart.html
+++ b/mvc-webapp/src/main/resources/templates/UserCart.html
@@ -54,20 +54,22 @@
 						</div>
 					</div>
 				</div>
-				<table width="600" height="200" align="center">
+				<table width="600" align="center" border="4">
 					<tr>
-						<th>Name</th>
-						<th>ID</th>
+						<th>Customer Name</th>
+						<th>Product ID</th>
 						<td><b>Quantity</b></td>
+						<th align="right">Proceed</th>
+						<th align="center">Cancel</th>
 					</tr>
-	
+					<tr></tr>
 					<tr th:each="cartinfo : ${UserCartModel.cartItemList}">
 						<td align="left"><span th:utext="${UserCartModel.userId}"></span></td>
 						<td align="left"><span th:utext="${cartinfo.productId}"></span></td>
 						<td align="left"><span th:utext="${cartinfo.quantity}"></span></td>
 						<!-- <td align="left"><span th:utext="${cartinfo.quantity}"></span></td> -->
-						<td><a class="cart_quantity_delete" href="/checkout"><img th:src="@{images/tick.png}" width="10" height="10" alt="tick"></img></a></td>
-						<td><a class="cart_quantity_delete" href=""><img th:src="@{images/wrong.jpg}" width="10" height="10" alt="wrong"></img></a></td>
+						<td align="center"><a class="cart_quantity_delete" href="/checkout"><img th:src="@{images/tick.png}" width="10" height="10" alt="tick"></img></a></td>
+						<td align="center"><a class="cart_quantity_delete" href=""><img th:src="@{images/wrong.jpg}" width="10" height="10" alt="wrong"></img></a></td>
 					</tr>
 				</table>
 			</div>
