--- a/mvc-webapp/src/main/resources/templates/UserInfo.html
+++ b/mvc-webapp/src/main/resources/templates/UserInfo.html
@@ -70,7 +70,7 @@
 						<th th:utext="${userinfo.email}"></th>
 					</tr>
 					<tr>
-						<th>Email Id</th><th>:</th>
+						<th>Provider</th><th>:</th>
 						<th th:utext="${userinfo.provider}"></th>
 					</tr>
 				</table>
