--- a/mvc-webapp/src/main/resources/templates/addProduct.html
+++ b/mvc-webapp/src/main/resources/templates/addProduct.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<th:block th:include="/AdminHeader"></th:block>
-	<form action="#" method="get">
+	<form action="/addtoproduct" method="get">
 		<table align="center" width="600" height="150">
 			<tr>
 				<th height="60"><font size="6">Add a New Product</font></th>
