--- a/mvc-webapp/src/main/resources/templates/AdminLogin.html
+++ b/mvc-webapp/src/main/resources/templates/AdminLogin.html
@@ -22,7 +22,7 @@
 			</tr>
 			<tr>
 				<th height="60"><font size="4">Password :</font></th>
-				<th><input type="password" name="pass" /></th>
+				<th><input type="password" name="password" /></th>
 			</tr>
 			<tr><th></th>
 				<th><input type="submit" value="Login" /></th>
