--- a/mvc-webapp/src/main/resources/templates/checkout.html
+++ b/mvc-webapp/src/main/resources/templates/checkout.html
@@ -30,7 +30,7 @@
 						<div class="bill-to">
 							<p>Bill To</p>
 							<div class="form-one">
-								<form action="" method="get">
+								<form action="/checkoutcomplete" method="get">
 									<input type="text" name="name" placeholder="Name" />
 									<input type="text" name="email" placeholder="Email" />
 									<input type="text" name="phone" placeholder="Phone" />
