--- a/mvc-webapp/src/main/resources/templates/_menu.html
+++ b/mvc-webapp/src/main/resources/templates/_menu.html
@@ -17,7 +17,9 @@
 
 					<div class="col-sm-3">
 						<div class="search_box pull-right">
-							<input placeholder="Search" type="text" />
+						<form action="/search">
+						<input name="key" placeholder="Search" type="text" />
+						</form>
 						</div>
 					</div>
 				</div>
