--- a/mvc-webapp/src/main/resources/templates/checkout.html
+++ b/mvc-webapp/src/main/resources/templates/checkout.html
@@ -9,7 +9,7 @@
 
 <body>
 	<!--/header-->
-<th:block th:include="/AdminHeader"></th:block>
+<th:block th:include="/UserHeader"></th:block>
 	<section id="cart_items">
 		<div class="container">
 			
@@ -31,25 +31,17 @@
 							<p>Bill To</p>
 							<div class="form-one">
 								<form action="/checkoutcomplete" method="get">
-									<input type="text" name="name" placeholder="Name" />
+									<input type="text" name="uid" th:value="${uid}" />
+									<input type="text" name="pid" th:value="${pid}" />
+									<input type="number" name="qua" th:value="${qua}" />
+									<input type="number" name="price" th:value="${price}" />
 									<input type="text" name="email" placeholder="Email" />
 									<input type="text" name="phone" placeholder="Phone" />
 									<input type="textarea" name="addressLine1" placeholder="Address line1" />
 									<input type="textarea" name="addressLine2" placeholder="Address Line2" />
 									<input type="text" name="pin" placeholder="pin code" />
-									<!-- <select>
-										<option> Country </option>
-										<option>United States</option>
-										<option>Bangladesh</option>
-										<option>UK</option>
-										<option>India</option>
-										<option>Pakistan</option>
-										<option>Ucrane</option>
-										<option>Canada</option>
-										<option>Dubai</option>
-									</select> -->
-									<br/><br/><br/><br/>
 									
+									<br/><br/>
 									    <input type="submit" value="Payment"  style="background-color:orange"/>
 								</form>
 							</div>
