--- a/mvc-webapp/src/main/resources/templates/checkout.html
+++ b/mvc-webapp/src/main/resources/templates/checkout.html
@@ -35,11 +35,11 @@
 									<input type="text" name="pid" th:value="${pid}" />
 									<input type="number" name="qua" th:value="${qua}" />
 									<input type="number" name="price" th:value="${price}" />
-									<input type="text" name="email" placeholder="Email" />
-									<input type="text" name="phone" placeholder="Phone" />
+									<input type="email" name="email" placeholder="Email" />
+									<input type="number" name="phone" placeholder="Phone" />
 									<input type="textarea" name="addressLine1" placeholder="Address line1" />
 									<input type="textarea" name="addressLine2" placeholder="Address Line2" />
-									<input type="text" name="pin" placeholder="pin code" />
+									<input type="number" name="pin" placeholder="pin code" />
 									
 									<br/><br/>
 									    <input type="submit" value="Payment"  style="background-color:orange"/>
