--- a/mvc-webapp/src/main/resources/templates/Home.html
+++ b/mvc-webapp/src/main/resources/templates/Home.html
@@ -63,8 +63,8 @@
 								<div class="product-image-wrapper">
 									<div class="">
 										<div class="productinfo text-center">
-											<p th:utext="${cat.id}"></p>
-											<h2 th:utext="${cat.name}"></h2>
+											<p th:utext="${cat.Id}"></p>
+											<h2 th:utext="${cat.productName}"></h2>
 											<p th:utext="${cat.price}"></p>
 											<a href="/loginauth" class="btn btn-default add-to-cart"><i
 												class="fa fa-shopping-cart"></i>Add to cart</a>
