--- a/mvc-webapp/src/main/resources/templates/index.html
+++ b/mvc-webapp/src/main/resources/templates/index.html
@@ -63,10 +63,10 @@
 								<div class="product-image-wrapper">
 									<div class="">
 										<div class="productinfo text-center">
-											<p th:utext="${cat.id}"></p>
-											<h2 th:utext="${cat.name}"></h2>
+											<p th:utext="${cat.Id}"></p>
+											<h2 th:utext="${cat.productName}"></h2>
 											<p th:utext="${cat.price}"></p>
-											<a th:href="@{/addtocart} + '?id='+ ${cat.id}" class="btn btn-default add-to-cart"><i
+											<a th:href="@{/addtocart} + '?name='+ ${cat.productName}" class="btn btn-default add-to-cart"><i
 												class="fa fa-shopping-cart"></i>Add to cart</a>
 										</div>
 									</div>
