--- a/mvc-webapp/src/main/resources/templates/HomeHeader.html
+++ b/mvc-webapp/src/main/resources/templates/HomeHeader.html
@@ -15,7 +15,7 @@
 				<div class="row">
 					<div class="col-sm-4">
 						<div class="logo pull-left">
-							<a href="/home1"><img th:src="@{/images/logo.jpg}" /></a>
+							<a href="/home"><img th:src="@{/images/logo.jpg}" /></a>
 						</div>
 					</div>
 					<div class="col-sm-8">
