--- a/mvc-webapp/src/main/resources/templates/AdminHome.html
+++ b/mvc-webapp/src/main/resources/templates/AdminHome.html
@@ -19,9 +19,9 @@
 							<div class="col-sm-4">
 								<div class="product-image-wrapper">
 										<div class="productinfo text-center">
-											<p th:utext="${cat.id}"></p>
-											<h2 th:utext="${cat.name}"></h2>
-											<p th:utext="${cat.price}"></p>
+											<h2 th:utext="${cat.productName}"></h2>
+											<p th:utext="'Price: '+${cat.price}"></p>
+											<p th:utext="'Code: '+${cat.productIdChild}"></p>
 											<a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Edit</a>
 									</div>
 								</div>
