--- a/mvc-webapp/src/main/resources/templates/AdminHome.html
+++ b/mvc-webapp/src/main/resources/templates/AdminHome.html
@@ -22,7 +22,7 @@
 											<h2 th:utext="${cat.productName}"></h2>
 											<p th:utext="'Price: '+${cat.price}"></p>
 											<p th:utext="'Code: '+${cat.productIdChild}"></p>
-											<a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Edit</a>
+											<a th:href="@{/updateproduct1} + '?id='+ ${cat.productIdChild}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Edit</a>
 									</div>
 								</div>
 							</div>
