--- a/mvc-webapp/src/main/resources/templates/AdminLogin.html
+++ b/mvc-webapp/src/main/resources/templates/AdminLogin.html
@@ -11,7 +11,7 @@
 <body>
 <th:block th:include="/HomeHeader"></th:block>
 <br/><br/><br/><br/><br/>
-	<form action="/adminlog" method="get">
+	<form action="/adminlog" method="post">
 		<table align="center" width="400" height="150">
 			<tr>
 				<th height="60"><font size="6">Admin Login</font></th>
