--- a/mvc-webapp/src/main/resources/templates/EditProduct.html
+++ b/mvc-webapp/src/main/resources/templates/EditProduct.html
@@ -14,13 +14,13 @@
 				
 				<div class="col-sm-9 padding-right">
 					<div class="features_items">
-						<h2 class="title text-center">Products List</h2>
-						<form action="/updateproduct">
-							<table>
-								<tr><th>Code of the Product :</th><th> <input type="text" name="productIdChild" th:value="${catalog.productIdChild}" /></th></tr>
-								<tr><th>Category Name:</th><th><input type="text" name="catagoryName" th:value="${catalog.catagoryName}" /></th></tr>
-								<tr><th>Name of the Product :</th><th><input type="text" name="productName" th:value="${catalog.productName}" /></th></tr>
-								<tr><th>Price of the Product :</th><th><input type="text" name="price" th:value="${catalog.price}"/></th></tr>
+						<h2 class="title text-center"><font size="6">Provide the UPDATED values</font></h2>
+						<form action="/updateproduct" method="POST">
+							<table align="center" width="600" height="150">
+								<tr><th height="60"><font size="4">Code of the Product :</font></th><th> <input type="text" name="productIdChild" readonly="readonly" th:value="${catalog.productIdChild}" /></th></tr>
+								<tr><th height="60"><font size="4">Category Name:</font></th><th><input type="text" name="catagoryName" th:value="${catalog.catagoryName}" /></th></tr>
+								<tr><th height="60"><font size="4">Name of the Product :</font></th><th><input type="text" name="productName" th:value="${catalog.productName}" /></th></tr>
+								<tr><th height="60"><font size="4">Price of the Product :</font></th><th><input type="text" name="price" th:value="${catalog.price}"/></th></tr>
 								<tr><th></th>
 								<th><input type="submit" value="Save" />
 								&emsp;&emsp;&emsp;&emsp;
