--- a/mvc-webapp/src/main/resources/templates/AdminHeader.html
+++ b/mvc-webapp/src/main/resources/templates/AdminHeader.html
@@ -21,6 +21,8 @@
 					<div class="col-sm-8">
 						<div class="shop-menu pull-right">
 							<ul class="nav navbar-nav">
+								<li><a href="/sar"><i class="fa fa-home"></i>
+										SAR</a></li>
 								<li><a href="/adminHome"><i class="fa fa-home"></i>
 										Home</a></li>
 								<li><a href="orderList.html"><i
