--- a/mvc-webapp/src/main/resources/templates/AdminHome.html
+++ b/mvc-webapp/src/main/resources/templates/AdminHome.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{/main.css}" />
 </head>
 <body>
-	<th:block th:include="/AdminHeader"></th:block>
+	<th:block th:include="AdminHeader"></th:block>
 	<section>
 		<div class="container">
 			<div class="row">
@@ -33,6 +33,6 @@
 		</div>
 	</section>
 	<br/><br/><br/><br/>
-	<th:block th:include="/_footer"></th:block>
+	<th:block th:include="_footer"></th:block>
 </body>
 </html>
