--- a/mvc-webapp/src/main/resources/templates/AdminLogin.html
+++ b/mvc-webapp/src/main/resources/templates/AdminLogin.html
@@ -9,7 +9,28 @@
 <!-- <script src="/login.js" ></script> --> 
 </head>
 <body>
-<th:block th:include="/HomeHeader"></th:block>
+<!-- <th:block th:include="/HomeHeader"></th:block> -->
+<header id="header">
+		<div class="header-middle">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-4">
+						<div class="logo pull-left">
+							<a href="/home"><img th:src="@{/images/logo.jpg}" /></a>
+						</div>
+					</div>
+					<div class="col-sm-8">
+						<div class="shop-menu pull-right">
+							<ul class="nav navbar-nav">
+								<li><a href="/adminlogin"><i class="fa fa-lock"></i>Admin Login</a></li>
+								<li><a href="/loginauth"><i class="fa fa-lock"></i> Login</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
 <br/><br/><br/><br/><br/>
 	<form action="/adminlog" method="post">
 		<table align="center" width="400" height="150">
@@ -30,6 +51,6 @@
 		</table>
 	</form>
 	<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-	<th:block th:include="/_footer"></th:block>
+	<th:block th:include="_footer"></th:block>
 </body>
 </html>
