--- a/mvc-webapp/src/main/resources/templates/AdminOrderList.html
+++ b/mvc-webapp/src/main/resources/templates/AdminOrderList.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{/main.css}" />
 </head>
 <body>
-	<th:block th:include="/AdminHeader"></th:block>
+	<th:block th:include="AdminHeader"></th:block>
 		<table width="800" height="200" align="center">
 					<tr>
 						<th>Order Number</th>
@@ -33,6 +33,6 @@
 					</tr>
 				</table>
 	<br/><br/><br/><br/><br/><br/><br/><br/><br/>
-	<th:block th:include="/_footer"></th:block>
+	<th:block th:include="_footer"></th:block>
 </body>
 </html>
