--- a/mvc-webapp/src/main/resources/templates/checkout.html
+++ b/mvc-webapp/src/main/resources/templates/checkout.html
@@ -9,7 +9,7 @@
 
 <body>
 	<!--/header-->
-<th:block th:include="/UserHeader"></th:block>
+<th:block th:include="UserHeader"></th:block>
 	<section id="cart_items">
 		<div class="container">
 			
