--- a/mvc-webapp/src/main/resources/templates/CheckoutConfirm.html
+++ b/mvc-webapp/src/main/resources/templates/CheckoutConfirm.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{/main.css}" />
 </head>
 <body>
-	<th:block th:include="/UserHeader"></th:block>
+	<th:block th:include="UserHeader"></th:block>
 	<br/><br/><br/>
 	<section>
 		<div class="container">
@@ -76,6 +76,6 @@
 		</div>
 	</section>
 	<br/><br/><br/>
-	<th:block th:include="/_footer"></th:block>
+	<th:block th:include="_footer"></th:block>
 </body>
 </html>
