--- a/mvc-webapp/src/main/resources/templates/ProductDetails.html
+++ b/mvc-webapp/src/main/resources/templates/ProductDetails.html
@@ -8,45 +8,8 @@
 <link rel="stylesheet" type="text/css" th:href="@{//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css}" />
 </head>
 <body>
-	<!-- <th:block th:include="/HomeHeader"></th:block> -->
-	
-	<header id="header">
-		<div class="header-middle">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-4">
-						<div class="logo pull-left">
-							<a href="/home"><img th:src="@{/images/logo.jpg}" /></a>
-						</div>
-					</div>
-					<div class="col-sm-8">
-						<div class="shop-menu pull-right">
-							<ul class="nav navbar-nav">
-								<li><a href="/adminlogin"><i class="fa fa-lock"></i>Admin Login</a></li>
-								<li><a href="/loginauth"><i class="fa fa-lock"></i> Login</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
-	<header id="header">
-		<div class="header-bottom">
-			<div class="container">
-				<div class="row">
-
-					<div class="col-sm-3">
-						<div class="search_box pull-right">
-						<form action="/search1">
-						<input name="key" placeholder="Search" type="text" />
-						</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
+	<th:block th:include="HomeHeader"></th:block>
+	<th:block th:include="_menu"></th:block>
 	<section>
 		<div class="container">
 			<div class="row">
@@ -57,35 +20,35 @@
 							<div class="panel panel-default">
 								<div class="panel-heading">
 									<h4 class="panel-title">
-										<a href="/category?type=mobiles">Mobiles</a>
+										<a href="Mobiles.html">Mobiles</a>
 									</h4>
 								</div>
 							</div>
 							<div class="panel panel-default">
 								<div class="panel-heading">
 									<h4 class="panel-title">
-										<a href="/category?type=laptops">Laptops</a>
+										<a href="Laptops.html">Laptops</a>
 									</h4>
 								</div>
 							</div>
 							<div class="panel panel-default">
 								<div class="panel-heading">
 									<h4 class="panel-title">
-										<a href="/category?type=clothing">Clothing</a>
+										<a href="Clothing.html">Clothing</a>
 									</h4>
 								</div>
 							</div>
 							<div class="panel panel-default">
 								<div class="panel-heading">
 									<h4 class="panel-title">
-										<a href="/category?type=bags">Bags</a>
+										<a href="Bags.html">Bags</a>
 									</h4>
 								</div>
 							</div>
 							<div class="panel panel-default">
 								<div class="panel-heading">
 									<h4 class="panel-title">
-										<a href="/category?type=Electronics">Electronics</a>
+										<a href="Shoes.html">Shoes</a>
 									</h4>
 								</div>
 							</div>
@@ -95,32 +58,25 @@
 				<div class="col-sm-9 padding-right">
 					<div class="features_items">
 						<h2 class="title text-center">Featured Items</h2>
-						<th:block th:each="cat : ${catalog}">
 							<div class="col-sm-4">
 								<div class="product-image-wrapper">
 									<div class="">
 										<div class="productinfo text-center">
-											<h2 th:utext="${cat.productName}"></h2>
-											<p th:utext="'Price: '+${cat.price}"></p>
-											<p th:utext="'Code: '+${cat.productIdChild}"></p>
+											<p th:utext="${catalog.id}"></p>
+											<h2 th:utext="${catalog.name}"></h2>
+											<p th:utext="${catalog.price}"></p>
 											<a href="/loginauth" class="btn btn-default add-to-cart"><i
 												class="fa fa-shopping-cart"></i>Add to cart</a>
 										</div>
 									</div>
-									<!-- <div class="choose">
-										<ul class="nav nav-pills nav-justified">
-											<li><a href="#"><i class="fa fa-money"></i>Buy</a></li>
-										</ul>
-									</div> -->
+								
 								</div>
 							</div>
-						</th:block>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<th:block th:include="_footer"></th:block>
+	<th:block th:include="/_footer"></th:block>
 </body>
 </html>
-
