--- a/mvc-webapp/src/main/resources/templates/SAR1.html
+++ b/mvc-webapp/src/main/resources/templates/SAR1.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{/main.css}" />
 </head>
 <body>
-	<th:block th:include="/AdminHeader"></th:block>
+	<th:block th:include="AdminHeader"></th:block>
 	<header id="header">
 		<div class="header-bottom">
 			<div class="container">
@@ -43,6 +43,6 @@
 		</tr>
 	</table>
 	<br/><br/><br/><br/>
-	<th:block th:include="/_footer"></th:block>
+	<th:block th:include="_footer"></th:block>
 </body>
 </html>
