--- a/mvc-webapp/src/main/resources/templates/UserCartEmpty.html
+++ b/mvc-webapp/src/main/resources/templates/UserCartEmpty.html
@@ -5,11 +5,10 @@
 <link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}" />
 <link rel="stylesheet" type="text/css" th:href="@{/font-awesome.min.css}" />
 <link rel="stylesheet" type="text/css" th:href="@{/main.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css}" />
 </head>
 <body>
-	<th:block th:include="HomeHeader"></th:block>
-	<th:block th:include="_menu"></th:block>
+	<th:block th:include="UserHeader"></th:block>
+	<br/><br/><br/>
 	<section>
 		<div class="container">
 			<div class="row">
@@ -55,34 +54,15 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-9 padding-right">
-					<div class="features_items">
-						<h2 class="title text-center">Featured Items</h2>
-						<th:block th:each="cat : ${catalog}">
-							<div class="col-sm-4">
-								<div class="product-image-wrapper">
-									<div class="">
-										<div class="productinfo text-center">
-											<p th:utext="${cat.id}"></p>
-											<h2 th:utext="${cat.name}"></h2>
-											<p th:utext="${cat.price}"></p>
-											<a href="/loginauth" class="btn btn-default add-to-cart"><i
-												class="fa fa-shopping-cart"></i>Add to cart</a>
-										</div>
-									</div>
-									<!-- <div class="choose">
-										<ul class="nav nav-pills nav-justified">
-											<li><a href="#"><i class="fa fa-money"></i>Buy</a></li>
-										</ul>
-									</div> -->
-								</div>
-							</div>
-						</th:block>
-					</div>
+				<div class="logo pull-right">
+					<a th:href="@{/clearcart}+'?name='+ ${userId}" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Clear the Cart</a>
 				</div>
+				<h2 th:utext="${message}"></h2>
+				
 			</div>
 		</div>
 	</section>
-	<th:block th:include="/_footer"></th:block>
+	<br/><br/><br/>
+	<th:block th:include="_footer"></th:block>
 </body>
 </html>
