--- a/mvc-webapp/src/main/resources/templates/index.html
+++ b/mvc-webapp/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css}" />
 </head>
 <body>
-	<th:block th:include="/UserHeader"></th:block>
+	<th:block th:include="UserHeader"></th:block>
 	<header id="header">
 		<div class="header-bottom">
 			<div class="container">
@@ -72,6 +72,7 @@
 				<div class="col-sm-9 padding-right">
 					<div class="features_items">
 						<h2 class="title text-center">Featured Items</h2>
+						<h5 th:utext="${message}"></h5>
 						<th:block th:each="cat : ${catalog}">
 							<div class="col-sm-4">
 								<div class="product-image-wrapper">
@@ -97,7 +98,7 @@
 			</div>
 		</div>
 	</section>
-	<th:block th:include="/_footer"></th:block>
+	<th:block th:include="_footer"></th:block>
 </body>
 </html>
 
