--- a/mvc-webapp/src/main/resources/templates/login-auth.html
+++ b/mvc-webapp/src/main/resources/templates/login-auth.html
@@ -7,7 +7,7 @@
 <title>Login- Admin</title>
 </head>
 <body>
-<th:block th:include="/HomeHeader"></th:block>
+<th:block th:include="HomeHeader"></th:block>
 		<form action="/connect/linkedin" method="POST">
 			<input type="hidden" name="scope" value="r_basicprofile,r_emailaddress" />
 			<button type="submit" class="btn btn-primary"> LinkedIn <span class="fa fa-linkedin"></span>
