--- a/mvc-webapp/src/main/resources/templates/AdminGiftCardList.html
+++ b/mvc-webapp/src/main/resources/templates/AdminGiftCardList.html
@@ -18,7 +18,7 @@
 						<td align="center"><a class="cart_quantity_delete" th:href="@{deletegiftcard(giftCardId=${giftcard.giftCardId},giftCardValue=${giftcard.giftCardValue})}"><img th:src="@{images\wrong.jpg}" width="10" height="10" alt="Delete"></img></a></td>
 				</tr>
 				<tr></tr>
-				<tr><a href="addGiftCard" ><i class="fa fa-shopping-cart"></i>Add Balance</a></tr>
+				<tr><a href="/addadmingiftcard" ><i class="fa fa-shopping-cart"></i>Add Balance</a></tr>
 				</table>
 				
 				
