--- a/mvc-webapp/src/main/resources/templates/ProductDetails.html
+++ b/mvc-webapp/src/main/resources/templates/ProductDetails.html
@@ -8,8 +8,43 @@
 <link rel="stylesheet" type="text/css" th:href="@{//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css}" />
 </head>
 <body>
-	<th:block th:include="HomeHeader"></th:block>
-	<th:block th:include="_menu"></th:block>
+<header id="header">
+		<div class="header-middle">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-4">
+						<div class="logo pull-left">
+							<a href="/home"><img th:src="@{/images/logo.jpg}" /></a>
+						</div>
+					</div>
+					<div class="col-sm-8">
+						<div class="shop-menu pull-right">
+							<ul class="nav navbar-nav">
+								<li><a href="/adminlogin"><i class="fa fa-lock"></i>Admin Login</a></li>
+								<li><a href="/loginauth"><i class="fa fa-lock"></i> Login</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	<header id="header">
+		<div class="header-bottom">
+			<div class="container">
+				<div class="row">
+
+					<div class="col-sm-3">
+						<div class="search_box pull-right">
+						<form action="/search1">
+						<input name="key" placeholder="Search" type="text" />
+						</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>>
 	<section>
 		<div class="container">
 			<div class="row">
@@ -65,18 +100,26 @@
 											<p th:utext="${catalog.id}"></p>
 											<h2 th:utext="${catalog.name}"></h2>
 											<p th:utext="${catalog.price}"></p>
-											<a href="/loginauth" class="btn btn-default add-to-cart"><i
-												class="fa fa-shopping-cart"></i>Add to cart</a>
 										</div>
 									</div>
-								
 								</div>
 							</div>
 					</div>
 				</div>
+				<table>
+					<tr><th>User ID</th><th>Ratings</th><th>Feedback</th></tr>
+					<tr></tr>
+					<tr th:each="productFeedback : ${productFeedbacks}">
+						<td align="left"><span th:utext="${productFeedback.userId}"></span></td>
+						<td align="left"><span th:utext="${productFeedback.rating}"></span></td>
+						<td align="left"><span th:utext="${productFeedback.feedback}"></span></td>
+						<tr></tr>
+					</tr>
+					</th:block>				
+				</table>
 			</div>
 		</div>
 	</section>
-	<th:block th:include="/_footer"></th:block>
+	<th:block th:include="_footer"></th:block>
 </body>
 </html>
