--- a/mvc-webapp/src/main/resources/templates/AdminHome.html
+++ b/mvc-webapp/src/main/resources/templates/AdminHome.html
@@ -19,10 +19,12 @@
 							<div class="col-sm-4">
 								<div class="product-image-wrapper">
 										<div class="productinfo text-center">
+										<h2 th:utext="${message}"></h2>
 											<h2 th:utext="${cat.productName}"></h2>
 											<p th:utext="'Price: '+${cat.price}"></p>
 											<p th:utext="'Code: '+${cat.productIdChild}"></p>
-											<a th:href="@{/updateproduct1} + '?id='+ ${cat.productIdChild}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Edit</a>
+											<a th:href="@{/updateproduct1} + '?id='+ ${cat.productIdChild}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Edit</a><br/>
+											<a th:href="@{/deleteProduct} + '?id='+ ${cat.productIdChild}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Delete</a>
 									</div>
 								</div>
 							</div>
