--- a/mvc-webapp/src/main/resources/templates/AdminLogin.html
+++ b/mvc-webapp/src/main/resources/templates/AdminLogin.html
@@ -32,6 +32,7 @@
 		</div>
 	</header>
 <br/><br/><br/><br/><br/>
+<h5 th:utext="${message}"></h5>
 	<form action="/adminlog" method="post">
 		<table align="center" width="400" height="150">
 			<tr>
