--- a/mvc-webapp/src/main/resources/templates/Feedback.html
+++ b/mvc-webapp/src/main/resources/templates/Feedback.html
@@ -55,7 +55,7 @@
 					</div>
 				</div>
 				<br/><br/>
-				<form action="feedbackresponse" id="feedbackform" method="post">
+				<form action="/feedbackresponse" id="feedbackform" method="post">
 					<table width="400" >
 						<tr><th>User ID</th><th>:</th><td><input type="text" name="userId" readonly="readonly" th:value="${userId}" /></td></tr>
 						<tr><th>Product ID</th><th>:</th><td><input type="text" name="productId" readonly="readonly" th:value="${productId}" /></td></tr>
