--- a/mvc-webapp/src/main/resources/templates/UserHeader.html
+++ b/mvc-webapp/src/main/resources/templates/UserHeader.html
@@ -24,7 +24,7 @@
 								<li><a href="/home1"><i class="fa fa-home"></i> Home</a></li>
 								<li><a th:href="@{/userinfo} + '?userId='+ ${userId}"><i class="fa fa-user"></i>
 										Account</a></li>
-								<li><a href="/userOrder"><i class="fa fa-crosshairs"></i>
+								<li><a th:href="@{/userOrder} + '?id='+ ${userId}"><i class="fa fa-shopping-cart"></i>
 										Order History</a></li>
 								<li><a th:href="@{/getcart} + '?id='+ ${userId}"><i class="fa fa-shopping-cart"></i>
 										Cart</a></li>
